k8s/dashboard/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-dashboard
  namespace: model-dev
  labels:
    app: dashboard
    tier: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
        tier: infra
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - ucsd
      containers:
      - name: homer
        image: b4bz/homer:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /www/assets/config.yml
          subPath: config.yml
        resources:
          requests:
            cpu: "50m"
            memory: "32Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
      volumes:
      - name: config
        configMap:
          name: infra-dashboard-config
