k8s/dashboard/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-dashboard-service
  namespace: model-dev
  labels:
    app: dashboard
    tier: infra
spec:
  selector:
    app: dashboard
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-dashboard-ingress
  namespace: model-dev
  labels:
    tier: infra
  annotations:
    haproxy.org/auth-url: "https://auth-model-dev.nrp-nautilus.io/api/verify?rd=https://hub-model-dev.nrp-nautilus.io"
    haproxy.org/auth-signin: "https://auth-model-dev.nrp-nautilus.io/?rd=https://hub-model-dev.nrp-nautilus.io"
    ingress.kubernetes.io/auth-url: "https://auth-model-dev.nrp-nautilus.io/api/verify?rd=https://hub-model-dev.nrp-nautilus.io"
    ingress.kubernetes.io/auth-signin: "https://auth-model-dev.nrp-nautilus.io/?rd=https://hub-model-dev.nrp-nautilus.io"
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - hub-model-dev.nrp-nautilus.io
  rules:
  - host: hub-model-dev.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infra-dashboard-service
            port:
              number: 8080
